--- a/Web/package.json
+++ b/Web/package.json
@@ -12,10 +12,15 @@
     "@avail-project/nexus-widgets": "^0.0.5",
     "@react-three/fiber": "^9.4.0",
     "@tanstack/react-query": "^5.90.3",
+    "class-variance-authority": "^0.7.1",
+    "clsx": "^2.1.1",
     "connectkit": "^1.9.1",
+    "lucide-react": "^0.546.0",
+    "motion": "^12.23.24",
     "next": "15.5.5",
     "react": "^19.2.0",
-    "react-dom": "^19.1.0",
+    "react-dom": "^19.2.0",
+    "tailwind-merge": "^3.3.1",
     "three": "^0.180.0",
     "viem": "^2.38.2",
     "wagmi": "^2.18.1"
