--- a/Web/package.json
+++ b/Web/package.json
@@ -10,18 +10,25 @@
   },
   "dependencies": {
     "@avail-project/nexus-widgets": "^0.0.5",
+    "@gsap/react": "^2.1.2",
     "@react-three/fiber": "^9.4.0",
     "@tanstack/react-query": "^5.90.3",
     "class-variance-authority": "^0.7.1",
     "clsx": "^2.1.1",
     "connectkit": "^1.9.1",
+    "framer-motion": "^12.23.24",
+    "gsap": "^3.13.0",
     "lucide-react": "^0.546.0",
     "motion": "^12.23.24",
     "next": "15.5.5",
     "react": "^19.2.0",
     "react-dom": "^19.2.0",
+    "react-particles": "^2.12.2",
+    "react-tsparticles": "^2.12.2",
+    "simplex-noise": "^4.0.3",
     "tailwind-merge": "^3.3.1",
     "three": "^0.180.0",
+    "tsparticles-slim": "^2.12.0",
     "viem": "^2.38.2",
     "wagmi": "^2.18.1"
   },
