--- a/Web/package.json
+++ b/Web/package.json
@@ -10,9 +10,12 @@
   },
   "dependencies": {
     "@avail-project/nexus-widgets": "^0.0.5",
+    "@coreui/coreui": "^5.4.3",
+    "@coreui/react": "^5.9.1",
     "@gsap/react": "^2.1.2",
     "@react-three/fiber": "^9.4.0",
     "@tanstack/react-query": "^5.90.3",
+    "@types/styled-components": "^5.1.34",
     "class-variance-authority": "^0.7.1",
     "clsx": "^2.1.1",
     "connectkit": "^1.9.1",
@@ -26,6 +29,7 @@
     "react-particles": "^2.12.2",
     "react-tsparticles": "^2.12.2",
     "simplex-noise": "^4.0.3",
+    "styled-components": "^6.1.19",
     "tailwind-merge": "^3.3.1",
     "three": "^0.180.0",
     "tsparticles-slim": "^2.12.0",
