--- a/Web/package.json
+++ b/Web/package.json
@@ -14,6 +14,7 @@
     "@coreui/react": "^5.9.1",
     "@gsap/react": "^2.1.2",
     "@react-three/fiber": "^9.4.0",
+    "@tabler/icons-react": "^3.35.0",
     "@tanstack/react-query": "^5.90.3",
     "@types/styled-components": "^5.1.34",
     "class-variance-authority": "^0.7.1",
@@ -24,6 +25,7 @@
     "lucide-react": "^0.546.0",
     "motion": "^12.23.24",
     "next": "15.5.5",
+    "ogl": "^1.0.11",
     "react": "^19.2.0",
     "react-dom": "^19.2.0",
     "react-particles": "^2.12.2",
