--- a/Backend/package.json
+++ b/Backend/package.json
@@ -7,7 +7,9 @@
   "scripts": {
     "start": "node src/server.js",
     "dev": "nodemon src/server.js",
-    "ngrok": "ngrok http 3001"
+    "ngrok": "ngrok http 3001",
+    "test-blockscout": "node test-blockscout.js",
+    "send-test-tx": "node send-test-transaction.js"
   },
   "keywords": [
     "gmail",
@@ -25,7 +27,8 @@
     "express": "^4.18.2",
     "express-session": "^1.17.3",
     "googleapis": "^126.0.1",
-    "ngrok": "^5.0.0-beta.2"
+    "ngrok": "^5.0.0-beta.2",
+    "node-fetch": "^3.3.2"
   },
   "devDependencies": {
     "nodemon": "^3.0.2"
